gcc/testsuite/rust/rustc/ui/tool-attributes/tool-attributes-shadowing.rs
mod rustfmt {}

#[rustfmt::skip] // { dg-error ".E0433." "" { target *-*-* } }
fn main() {}

